--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <a href="#home" class="w3-bar-item w3-button"><b>ToastFace</b></a>
         <!-- Float links to the right. Hide them on small screens -->
         <div class="w3-right w3-hide-small">
-            <a href="#projects" class="w3-bar-item w3-button">Products</a>
-            <a href="#about" class="w3-bar-item w3-button">About</a>
-            <a href="#contact" class="w3-bar-item w3-button">Contacts</a>
-            <a href="#Purchase" class="w3-bar-item w3-button">Where to Purchase</a>
+            <a href="projects.html" class="w3-bar-item w3-button">Products</a>
+            <a href="about.html" class="w3-bar-item w3-button">About</a>
+            <a href="contact.html" class="w3-bar-item w3-button">Contacts</a>
+            <a href="purchase.html" class="w3-bar-item w3-button">Where to Purchase</a>
         </div>
     </div>
 </div>
@@ -26,7 +26,6 @@
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
     <img class="Toastface-Product" src="ToastFace_V01.jpg" alt="Toaster" width="1500" height="800">
     <div class="w3-display-middle w3-margin-top w3-center">
-        <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Architects</span></h1>
     </div>
 </header>
 
@@ -64,40 +63,16 @@
             </div>
         </div>
     </div>
-
-    <div class="w3-row-padding">
-        <div class="w3-col l3 m6 w3-margin-bottom">
-            <div class="w3-display-container">
-                <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-                <img src="/w3images/house2.jpg" alt="House" style="width:99%">
-            </div>
-        </div>
-        <div class="w3-col l3 m6 w3-margin-bottom">
-            <div class="w3-display-container">
-                <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-                <img src="/w3images/house5.jpg" alt="House" style="width:99%">
-            </div>
-        </div>
-        <div class="w3-col l3 m6 w3-margin-bottom">
-            <div class="w3-display-container">
-                <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-                <img src="/w3images/house4.jpg" alt="House" style="width:99%">
-            </div>
-        </div>
-        <div class="w3-col l3 m6 w3-margin-bottom">
-            <div class="w3-display-container">
-                <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-                <img src="/w3images/house3.jpg" alt="House" style="width:99%">
-            </div>
-        </div>
-    </div>
-
     <!-- About Section -->
     <div class="w3-container w3-padding-32" id="about">
         <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
-            occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris nisi ut aliquip ex ea commodo consequat.
+        <p> Introducing the revolutionary ToastFace toaster! We believe that everyone deserves a personalized morning experience, and what better way to start your day than with your own face smiling back at you from your toast? Our innovative toaster takes the ordinary breakfast routine and turns it into a delightful and memorable experience.
+            <br>
+            With ToastFace, you can capture your morning selfie and transform it into edible art on your toast. It's as simple as snapping a photo and letting our toaster work its magic. Gone are the days of boring breakfasts – now, every slice of toast is a canvas for self-expression and creativity.
+            <br>
+            To learn more about how ToastFace works and how you can start your day with a smile, visit our About Page. Discover the technology behind our toaster and join the toast revolution today!
+            <br>
+            Join us at ToastFace and make your breakfasts unforgettable, one selfie toast at a time.
         </p>
     </div>
 
