--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
     <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-        <a href="#home" class="w3-bar-item w3-button"><b>ToastFace</b></a>
+        <a href="index.html" class="w3-bar-item w3-button"><b>ToastFace</b></a>
         <!-- Float links to the right. Hide them on small screens -->
         <div class="w3-right w3-hide-small">
             <a href="projects.html" class="w3-bar-item w3-button">Products</a>
@@ -40,26 +40,14 @@
     <div class="w3-row-padding">
         <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-                <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-                <img src="/w3images/house5.jpg" alt="House" style="width:100%">
+                <div class="w3-display-topleft w3-black w3-padding">ToastFace Camera</div>
+                <img src="toastcamera.jpg" alt="House" style="width:100%">
             </div>
         </div>
         <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
-                <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-                <img src="/w3images/house2.jpg" alt="House" style="width:100%">
-            </div>
-        </div>
-        <div class="w3-col l3 m6 w3-margin-bottom">
-            <div class="w3-display-container">
-                <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-                <img src="/w3images/house3.jpg" alt="House" style="width:100%">
-            </div>
-        </div>
-        <div class="w3-col l3 m6 w3-margin-bottom">
-            <div class="w3-display-container">
-                <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-                <img src="/w3images/house4.jpg" alt="House" style="width:100%">
+                <div class="w3-display-topleft w3-black w3-padding">ToastFace Image Printing</div>
+                <img src="faceontoast.jpg" alt="House" style="width:100%">
             </div>
         </div>
     </div>
@@ -68,44 +56,49 @@
         <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">About</h3>
         <p> Introducing the revolutionary ToastFace toaster! We believe that everyone deserves a personalized morning experience, and what better way to start your day than with your own face smiling back at you from your toast? Our innovative toaster takes the ordinary breakfast routine and turns it into a delightful and memorable experience.
             <br>
+                <br>
             With ToastFace, you can capture your morning selfie and transform it into edible art on your toast. It's as simple as snapping a photo and letting our toaster work its magic. Gone are the days of boring breakfasts – now, every slice of toast is a canvas for self-expression and creativity.
             <br>
+                <br>
             To learn more about how ToastFace works and how you can start your day with a smile, visit our About Page. Discover the technology behind our toaster and join the toast revolution today!
             <br>
+                <br>
             Join us at ToastFace and make your breakfasts unforgettable, one selfie toast at a time.
         </p>
     </div>
-
-    <div class="w3-row-padding w3-grayscale">
-        <div class="w3-col l3 m6 w3-margin-bottom">
-            <img src="/w3images/team2.jpg" alt="John" style="width:100%">
-            <h3>John Doe</h3>
-            <p class="w3-opacity">CEO & Founder</p>
-            <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-            <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-        </div>
-        <div class="w3-col l3 m6 w3-margin-bottom">
-            <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
-            <h3>Jane Doe</h3>
-            <p class="w3-opacity">Architect</p>
-            <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-            <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-        </div>
-        <div class="w3-col l3 m6 w3-margin-bottom">
-            <img src="/w3images/team3.jpg" alt="Mike" style="width:100%">
-            <h3>Mike Ross</h3>
-            <p class="w3-opacity">Architect</p>
-            <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-            <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-        </div>
-        <div class="w3-col l3 m6 w3-margin-bottom">
-            <img src="/w3images/team4.jpg" alt="Dan" style="width:100%">
-            <h3>Dan Star</h3>
-            <p class="w3-opacity">Architect</p>
-            <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-            <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-        </div>
+    <div class="w3-container w3-padding-32" id="OurTeam">
+        <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Our Team</h3>
     </div>
+        <div class="w3-row-padding w3-grayscale">
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+                <h3>Jerome Ribaldone</h3>
+                <p class="w3-opacity">CEO & Founder</p>
+                <p>I Believe Everyone should have their face on their Toast</p>
+                <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+            </div>
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <img src="janedeirde.jpg" alt="Jane" style="width:100%">
+                <h3>Jane Deirde</h3>
+                <p class="w3-opacity">Vice CEO</p>
+                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+            </div>
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <img src="michealrichardson.jpg" alt="Mike" style="width:100%">
+                <h3>Micheal Richardson</h3>
+                <p class="w3-opacity">Head of IT</p>
+                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+            </div>
+            <div class="w3-col l3 m6 w3-margin-bottom">
+                <img src="DanielStewart.png" alt="Dan" style="width:100%">
+                <h3>Daniel Stewart</h3>
+                <p class="w3-opacity">Head Engineer</p>
+                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+            </div>
+        </div>
 
     <!-- Contact Section -->
     <div class="w3-container w3-padding-32" id="contact">
