Added contact.html content, Removed purchase.html

--- a/contact.html
+++ b/contact.html
@@ -16,15 +16,59 @@
             <a href="projects.html" class="w3-bar-item w3-button">Products</a>
             <a href="about.html" class="w3-bar-item w3-button">About</a>
             <a href="contact.html" class="w3-bar-item w3-button">Contacts</a>
-            <a href="purchase.html" class="w3-bar-item w3-button">Where to Purchase</a>
         </div>
     </div>
 </div>
+<br>
+<br>
+    <H1>Contact Us</H1>
+       <center><p>
+            Thank you for your interest in ToastFace – where breakfast meets innovation! We're thrilled to hear from you and welcome any inquiries, feedback, or suggestions you may have. Whether you're a toast enthusiast, a breakfast aficionado, or simply curious about our selfie-toasting technology, we're here to assist you.
+        <br>
+            <br>
+            Feel free to reach out to us using the following contact information:
+        <br>
+        <br>
 
+            <b>Email:</b> contact@toastface.com
+            <br>
+            <b>Phone:</b> 1-800-TOASTFACE (1-800-862-7832)
+            <br>
+            <b>Address:</b>
+            ToastFace Headquarters
+            123 Breakfast Blvd.
+            Toastsville, TX 12345
+            United States
+           <br>
+           <br>
+           Our dedicated team is committed to providing exceptional customer support and ensuring that your toast-face experience is nothing short of extraordinary. Whether you have questions about our products, need assistance with your toaster, or simply want to share your selfie-toast creations with us, we're here to help.<br>
+    <br>
+    Don't hesitate to drop us a line or give us a call – we can't wait to hear from you!
+    <br><br>
+    Warm regards,
+    <br><br>
+    The ToastFace Team
+</p></center>
 </body>
+
+<!-- Contact Section -->
+<div class="w3-container w3-padding-32" id="contact">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Contact</h3>
+    <p>Lets get in touch and talk about your next project.</p>
+    <form action="/action_page.php" target="_blank">
+        <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
+        <input class="w3-input w3-section w3-border" type="text" placeholder="Email" required name="Email">
+        <input class="w3-input w3-section w3-border" type="text" placeholder="Subject" required name="Subject">
+        <input class="w3-input w3-section w3-border" type="text" placeholder="Comment" required name="Comment">
+        <button class="w3-button w3-black w3-section" type="submit">
+            <i class="fa fa-paper-plane"></i> SEND MESSAGE
+        </button>
+    </form>
+</div>
+
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
-    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">Toast</a></p>
 </footer>
 
 </html>
