--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             <a href="projects.html" class="w3-bar-item w3-button">Products</a>
             <a href="about.html" class="w3-bar-item w3-button">About</a>
             <a href="contact.html" class="w3-bar-item w3-button">Contacts</a>
-            <a href="purchase.html" class="w3-bar-item w3-button">Where to Purchase</a>
         </div>
     </div>
 </div>
@@ -71,7 +70,7 @@
     </div>
         <div class="w3-row-padding w3-grayscale">
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+                <img src="placeholder_face.jpg" alt="Jerome" style="width:100%">
                 <h3>Jerome Ribaldone</h3>
                 <p class="w3-opacity">CEO & Founder</p>
                 <p>I Believe Everyone should have their face on their Toast</p>
@@ -126,7 +125,7 @@
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
-    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">toast</a></p>
 </footer>
 
 </body>
