--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,6 @@
             <a href="projects.html" class="w3-bar-item w3-button">Products</a>
             <a href="about.html" class="w3-bar-item w3-button">About</a>
             <a href="contact.html" class="w3-bar-item w3-button">Contacts</a>
-            <a href="purchase.html" class="w3-bar-item w3-button">Where to Purchase</a>
         </div>
     </div>
 </div>
@@ -24,7 +23,7 @@
 </body>
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-16">
-    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">toast</a></p>
 </footer>
 
 </html>
