Added contact.html content, Removed purchase.html

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Abut Us</title>
+    <title>About Us</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -19,6 +19,31 @@
         </div>
     </div>
 </div>
+
+<p>
+<h2> About Us</h2>
+Welcome to ToastFace, where we blend technology with breakfast to bring a smile to your face – quite literally! At ToastFace, we believe that breakfast should be more than just a meal; it should be an experience that brightens your morning and sets the tone for the day ahead.
+    <br><br>
+Our journey began with a simple idea: why settle for plain toast when you can have your face printed on it? Thus, ToastFace was born – a delightful fusion of culinary creativity and cutting-edge technology. With our innovative toaster, you can turn your morning routine into a personalized masterpiece, one slice of toast at a time.
+    <br><br>
+But ToastFace is more than just a toaster – it's a celebration of individuality, innovation, and the joy of breakfast. We're passionate about helping you start your day with a smile, and we're dedicated to pushing the boundaries of what's possible in the world of breakfast.
+    <br><br>
+At ToastFace, we're committed to quality, craftsmanship, and customer satisfaction. Each toaster is meticulously designed and engineered to ensure precision and reliability, so you can enjoy perfect selfie toast every time. Our team of experts is constantly exploring new ideas and technologies to enhance your breakfast experience and bring even more fun and excitement to your morning routine.
+    <br><br>
+But our journey wouldn't be complete without you – our valued customers and fellow breakfast enthusiasts. Your feedback, support, and enthusiasm inspire us to continue innovating and pushing the envelope of breakfast technology. Together, we're shaping the future of breakfast, one selfie toast at a time.
+    <br><br>
+So join us at ToastFace and experience the magic of breakfast reinvented. Whether you're a seasoned toast aficionado or just curious about our selfie-toasting technology, we invite you to be part of our toast revolution. Together, let's toast to a brighter, tastier, and more delightful morning – with ToastFace.
+    <br><br>
+Here's to breakfast, here's to innovation, and here's to you!
+    <br><br>
+Sincerely,
+    <br><br>
+The ToastFace Team
+</p>
+
+
+
+
 
 </body>
 <!-- Footer -->
