Added images for profiles

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
         <div class="w3-row-padding w3-grayscale">
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <img src="placeholder_face.jpg" alt="Jerome" style="width:100%">
+                <img src="placeholder_face.jpeg" alt="Jerome" style="width:100%">
                 <h3>Jerome Ribaldone</h3>
                 <p class="w3-opacity">CEO & Founder</p>
                 <p>I Believe Everyone should have their face on their Toast</p>
@@ -80,21 +80,21 @@
                 <img src="janedeirde.jpg" alt="Jane" style="width:100%">
                 <h3>Jane Deirde</h3>
                 <p class="w3-opacity">Vice CEO</p>
-                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                <p>I Don't know how I ate my toast without my face on it</p>
                 <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <img src="michealrichardson.jpg" alt="Mike" style="width:100%">
                 <h3>Micheal Richardson</h3>
                 <p class="w3-opacity">Head of IT</p>
-                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                <p>I'm head of IT, Praise the Toastface</p>
                 <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <img src="DanielStewart.png" alt="Dan" style="width:100%">
                 <h3>Daniel Stewart</h3>
                 <p class="w3-opacity">Head Engineer</p>
-                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                <p>I'm Head Engineer, my job is to overlook new design idea and new implementations</p>
                 <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
             </div>
         </div>
