--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
         <div class="w3-row-padding w3-grayscale">
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <img src="placeholder_face.jpeg" alt="Jerome" style="width:100%">
+                <img src="placeholder_face.jpg" alt="Jerome" style="width:100%">
                 <h3>Jerome Ribaldone</h3>
                 <p class="w3-opacity">CEO & Founder</p>
                 <p>I Believe Everyone should have their face on their Toast</p>
