Added images and added content to projects.html

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
         <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
                 <div class="w3-display-topleft w3-black w3-padding">ToastFace Camera</div>
-                <img src="toastcamera.jpg" alt="House" style="width:100%">
+                <img src="toastcamera.png" alt="toast camera" style="width:100%">
             </div>
         </div>
         <div class="w3-col l3 m6 w3-margin-bottom">
             <div class="w3-display-container">
                 <div class="w3-display-topleft w3-black w3-padding">ToastFace Image Printing</div>
-                <img src="faceontoast.jpg" alt="House" style="width:100%">
+                <img src="faceontoast.jpg" alt="face on tpast" style="width:100%">
             </div>
         </div>
     </div>
