--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
+<style>
+    .container {
+        display: flex;
+        align-items: center;
+        justify-content: center
+    }
+
+    img {
+        max-width: 100%;
+        max-height:100%;
+    }
+
+    .text {
+        font-size: 20px;
+        padding-left: 20px;
+    }
+</style>
+
 <body>
 
 <!-- Navbar (sit on top) -->
@@ -19,6 +37,24 @@
         </div>
     </div>
 </div>
+<div class="container">
+    <div class="image">
+        <img src="toastcamera.png" width="1000" height="1000">
+    </div>
+    <div class="text">
+        <h1>Creating The Toaster Camera: ................</h1>
+    </div>
+    <br>
+</div>
+<div class="container">
+    <div class="image">
+        <img src="faceontoast.jpg" width="1000" height="1000">
+    </div>
+    <div class="text">
+        <h1>Technology Behind burning face into toast....................</h1>
+    </div>
+</div>
+
 <h2></h2>
 </body>
 <!-- Footer -->
